# cipherowl

./: .gitignore  AGENTS.md  COMPLETION_PLAN.md  PROJECT_DOCUMENTATION.md  README.md  ROADMAP_V2.md  SECURITY.md  TASKS.md  add_dependencies.ps1  add_deps_v2.ps1  analyze.txt  beads_setup.ps1  create_tasks.ps1  dart_test.yaml  flutter_rust_bridge.yaml  l10n.yaml  pubspec.yaml  test2.json
.beads/: config.yaml  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.github/: SECRETS.md
.github/workflows/: cd-android.yml  cd-desktop.yml  cd-ios.yml  cd-web.yml  ci.yml  deploy-functions.yml  release.yml  security-audit.yml
android/app/: build.gradle.kts  proguard-rules.pro
assets/animations/: loading_spinner.json  shield_lock.json  success_check.json
browser_extension/src/: README.md  manifest.json
docs/: ADR.md  API.md  CHROME_WEB_STORE_LISTING.md  GRADUATION_REPORT.md  MASVS_CHECKLIST.md  PRIVACY_POLICY.md  SECURITY_WHITEPAPER.md  SESSION_REPORT.md  SOC2_READINESS.md  USER_GUIDE.md
docs/legal/: privacy_policy_ar.md  privacy_policy_en.md  terms_of_service_ar.md  terms_of_service_en.md
ios/AutoFillExtension/: AutoFillExtension.entitlements  CredentialProviderViewController.swift  Info.plist
ios/Runner/: AppDelegate.swift  Info.plist  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
linux/: CMakeLists.txt
native/smartvault_core/: Cargo.toml
native/smartvault_core/benches/: crypto_bench.rs
native/smartvault_core/fuzz/: Cargo.toml
native/smartvault_core/fuzz/fuzz_targets/: fuzz_aes_decrypt.rs  fuzz_argon2.rs  fuzz_bip39.rs  fuzz_totp.rs
native/smartvault_core/src/: api.rs  frb_generated.rs  lib.rs
native/smartvault_core/src/crypto/: aes_gcm.rs  argon2.rs  bip39.rs  ed25519.rs  mod.rs  pbkdf2.rs  sharing.rs  x25519.rs
native/smartvault_core/src/face/: embedding.rs
native/smartvault_core/src/memory/: mod.rs  secure_memory.rs
native/smartvault_core/src/password/: generator.rs  mod.rs  strength.rs
native/smartvault_core/src/totp/: generator.rs
scripts/: add_descriptions.ps1  add_missing_tasks.ps1  build_rust_android.ps1  fix_tasks_encoding.ps1  install_android_sdk.ps1  install_android_sdk.py  setup_dev_env.ps1
store/: README.md
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+238 files in other folders)
