[package]
name = "smartvault_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0"
aes-gcm = { version = "0.10.3", features = ["std"] }
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
zeroize = { version = "1.7.0", features = ["derive"] }
rand = { version = "0.8.5", features = ["std"] }
sha2 = "0.10.8"
hex = "0.4.3"
base64 = "0.22.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi"] }

[dev-dependencies]
hex-literal = "0.4.1"
